[gd_scene load_steps=5 format=3 uid="uid://clqqpt8pulpiy"]

[ext_resource type="Script" path="res://Scripts/Menu/inicio.gd" id="1_b1bkd"]
[ext_resource type="Texture2D" uid="uid://dmxywrp1usmrg" path="res://Assets/SpritesPrincipais/Background.jpg" id="2_aet16"]
[ext_resource type="Texture2D" uid="uid://b4aem0547jwsx" path="res://Assets/SpritesPrincipais/Logo.png" id="2_omduq"]
[ext_resource type="AudioStream" uid="uid://crh0ph6ohwvh2" path="res://Assets/SFX/Select.wav" id="3_1d7hf"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("1_b1bkd")

[node name="Fundo" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.255994, 0.661647, 0.875794, 1)

[node name="TextureRect" type="TextureRect" parent="Fundo"]
self_modulate = Color(1, 1, 1, 0.2)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_aet16")
expand_mode = 1

[node name="Botoes" type="VBoxContainer" parent="Fundo"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 286.0
offset_top = -210.0
offset_right = 856.0
offset_bottom = 210.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 80
alignment = 1

[node name="Tutorial" type="Button" parent="Fundo/Botoes"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
theme_override_font_sizes/font_size = 52
text = "Tutorial"

[node name="Jogar" type="Button" parent="Fundo/Botoes"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
theme_override_font_sizes/font_size = 52
text = "Jogar"

[node name="Sair" type="Button" parent="Fundo/Botoes"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
theme_override_font_sizes/font_size = 52
text = "Sair"

[node name="Logo" type="TextureRect" parent="Fundo"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -968.0
offset_top = -297.0
offset_right = 59.0
offset_bottom = 297.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_omduq")
expand_mode = 1

[node name="SFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_1d7hf")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="pressed" from="Fundo/Botoes/Tutorial" to="." method="_on_tutorial_pressed"]
[connection signal="pressed" from="Fundo/Botoes/Jogar" to="." method="_on_jogar_pressed"]
[connection signal="pressed" from="Fundo/Botoes/Sair" to="." method="_on_sair_pressed"]
